Fix enemy infantry + engineer die animation to be properly bottom-aligned

--- a/css/aa.css
+++ b/css/aa.css
@@ -701,6 +701,12 @@ ul.stats-bar .bombs em {
  transform: scaleX(-1);
 }
 
+#world .infantry.enemy.exploding,
+#world .engineer.enemy.exploding {
+ /* stupid display fix */
+ height: 22px !important;
+}
+
 #world .tank.enemy .sub-sprite {
  /* no flip in certain cases */
  filter: none;
